--- a/ruoyi-admin/src/main/resources/application.yml
+++ b/ruoyi-admin/src/main/resources/application.yml
@@ -70,15 +70,15 @@ spring:
   # redis 配置
   redis:
     # 地址
-    host: localhost
+    host: 39.105.195.6
     # 端口，默认为6379
     port: 6379
     # 数据库索引
     database: 0
     # 密码
-    password: 
+    password: '0302'
     # 连接超时时间
-    timeout: 10s
+    timeout: 3000
     lettuce:
       pool:
         # 连接池中的最小空闲连接
